# Price-Watcher

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  pytest.ini
backend/accounts/: test_auth.py  urls.py  views.py
backend/backend/: celery.py  settings.py  urls.py
backend/notifications/: urls.py  utils.py
backend/products/: models.py  serializers.py  test_models.py  urls.py  views.py
backend/products/migrations/: 0001_initial.py
backend/scraping/: scrapers.py  tasks.py  test_scraping.py  urls.py
frontend/: package-lock.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Alert.tsx  Button.tsx  Input.tsx  ProtectedRoute.tsx  ThemeToggle.tsx
frontend/src/hooks/: useForm.ts  useTheme.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/utils/: api.ts
