[project]
name = "backend"
version = "0.1.0"
description = "Price Watcher Backend - Django REST API for multi-platform price tracking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.5",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.3.0",
    "django-cors-headers>=4.3.1",
    "django-filter>=23.4",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "psycopg2-binary>=2.9.7",
    "playwright>=1.44.0",
    "requests>=2.31.0",
    "python-decouple>=3.8",
    "django-extensions>=3.2.3",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.2",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
]

[dependency-groups]
test = [
    "pytest-asyncio>=1.1.0",
]
